# pharma-intelligence

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: data_sources.md  experiment_01_sarimax_baseline.md  experiment_02_rag_evaluation_guide.md  experiment_02_rag_evaluation_results.md  experiment_02_realistic_mock.md  experiment_03_realistic_mock.md  experiment_04_real_data_integration.md  experiment_05_thai_rag.md  experiment_06_rag_evaluation.md  experiment_07_llm_benchmark.md  experiment_08_prophet.md  experiment_09_xgboost.md  experiment_10_tft.md  experiment_11_ablation_study.md  experiment_12_final_benchmark.md  experiment_registry.md  experiment_template.md  master_plan.md  next_steps.md  project_scope.md
docs/prompts/: README.md  step_A_fix_mock_data.md  step_B_prophet_baseline.md  step_C_xgboost.md
notebooks/: 01_build_index_colab.ipynb  02_forecasting_baselines_colab.ipynb
notebooks/results/01_notebook_result/data/processed/: experiment_02_eval_results.csv  experiment_02_eval_results.json  (+2 more)
scripts/: benchmark_providers.py  build_index.py  download_clinicaltrials.py  download_egp.py  download_hdc.py  download_nhso.py  download_nlem.py  download_orange_book.py  download_pubmed.py  download_ratchakitcha.py  download_tfda.py  evaluate_rag.py  generate_mock_demand.py  query_rag.py  run_ingestion_pipeline.py  run_prophet_baseline.py  run_sarimax_baseline.py  run_tft_experiment.py  run_xgboost_baseline.py
src/pharma_intel/: __init__.py
src/pharma_intel/common/: __init__.py  config.py  constants.py  logging.py
src/pharma_intel/forecasting/: __init__.py  anchors.py  baselines.py  evaluation.py  feature_engineering.py  mock_data.py  molecule_classes.py  prophet_baseline.py  tft_model.py  xgboost_model.py
src/pharma_intel/ingestion/: __init__.py  base.py  clinicaltrials_api.py  egp_scraper.py  fda_orange_book.py  hdc_scraper.py  nhso_scraper.py  nlem_scraper.py  pipeline.py  pubmed_api.py  ratchakitcha_scraper.py  tfda_scraper.py
src/pharma_intel/rag/: __init__.py  embeddings.py  evaluator.py  event_extractor.py  hybrid_retrieval.py  indexer.py  query.py  vectorstore.py
src/pharma_intel/rag/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  thaillm_provider.py
tests/: test_forecasting.py  test_forecasting_scaffolds.py  test_ingestion_pipeline.py  test_llm.py  test_rag_scaffolds.py  test_smoke.py
(+2 files in other folders)
