[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-intel"
version = "0.1.0"
description = "Pharmaceutical Intelligence Platform for GPO — Regulatory RAG + Demand Forecasting"
authors = [{name = "Siripon Srihangpiboon", email = "srihangpiboon.siri@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "Proprietary"}

dependencies = [
    # Core
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "typer>=0.9",
    "rich>=13.7",

    # Data
    "pandas>=2.1",
    "polars>=0.20",
    "duckdb>=0.9",
    "pyarrow>=14.0",
    "numpy>=1.26",

    # HTTP / scraping
    "httpx>=0.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # RAG stack
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3",
    "llama-index-core>=0.10",
    "llama-index-vector-stores-chroma>=0.1",
    "llama-index-embeddings-huggingface>=0.1",
    "rank-bm25>=0.2.2",

    # LLM
    "anthropic>=0.18",

    # Thai NLP
    "pythainlp>=5.0",

    # Forecasting baselines (lightweight, no GPU)
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
forecasting = [
    # Heavier forecasting deps for TFT
    "pytorch-forecasting>=1.0",
    "lightning>=2.1",
    "statsforecast>=1.7",
    "darts>=0.27",
    "xgboost>=2.0",
    "lightgbm>=4.1",
]
dev = [
    # Core dev tools — no Jupyter (avoids Windows long-path issues)
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.12",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
notebook = [
    # Optional Jupyter support — install only if you need it
    # On Windows, enable Long Path Support first (see README troubleshooting)
    "ipykernel>=6.28",
    "jupyter>=1.0",
    "notebook>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
